Rework vertical spacing between articles, to avoid wacky spacing with the grid layout.

--- a/src/blocks/homepage-articles/view.scss
+++ b/src/blocks/homepage-articles/view.scss
@@ -3,13 +3,9 @@
 
 .wp-block-newspack-blocks-homepage-articles {
 	article {
-		margin-bottom: 1em;
+		margin-bottom: 1.5em;
 		word-break: break-word;
 		overflow-wrap: break-word;
-
-		&:not(:last-child) {
-			margin-bottom: 1.5em;
-		}
 	}
 
 	/* Section header */
@@ -30,6 +26,10 @@
 
 		article {
 			width: 100%;
+
+			@include media(tablet) {
+				margin-bottom: 1em;
+			}
 		}
 	}
 
